assets/css/style.css
/* Import from Google Fonts */

@import url('https://fonts.googleapis.com/css2?family=Inconsolata&display=swap');

/* general page code */
* {
    margin: 0;
    padding: 0;
    border: none;
}

body {
    font-family: 'Inconsolata', sans-serif;
    font-weight: 400;
    color: #1858b3;
}

/* styling for header and  logo section */

header {
    display: flex;
    width: 100%;
    height: auto;
}

#header-about {
    width: 40%;
    padding-top: 40px;
    text-align: left;
    line-height: 25px;
}

#header-how {
    width: 40%;
    padding: 40px;
    text-align: left;
    line-height: 25px;
}

header span {
    font-weight: bold;
}

#logo {
    width: 20%;
    height: auto;
    justify-content: center;
    padding-bottom: 10px;
}

/* Styling for whole area where user input is collected */

#user-input-area {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 100%;
}
/* Styling of criteria section */

#criteria-section {
    width: 35%;
    padding: 10px;
    display: inline-grid;
}

#criteria-section input {
    border: #1858b3 solid 3px;
    width: 95%;
    height: 20px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
}

/*styling for criteria importance section */

#user-importance input {
    border: #1858b3 solid 3px;
    width: 90%;
    height: 20px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
}

#user-importance {
    width: 25%;
}

/* styling for buttons and buttons area */

#buttons-area {
    width: 100%;
}

#print {
    border: #c2d5f6 solid 3px;
    color: #ffffff;
    background-color: #526291;
    float: right;
    width: 10%;
    height: 40px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
    margin-top: 40px;
    margin-right: 40px;
}

#print:hover {
    border: #c2d5f6 solid 3px;
    color: #526291;
    background-color: #ffffff;
}

#calculate {
    border: #1858b3 solid 3px;
    color: #ffffff;
    background-color: #1858b3;
    float: left;
    width: 15%;
    height: 40px;
    border-radius: 5px;
    text-align: center;
    text-transform: uppercase;
    font-size: 1.05rem;
    padding: 5px;
    margin-bottom: 10px;
    margin-top: 40px;
    margin-left: 40px;
}

#calculate:hover {
    border: #1858b3 solid 3px;
    color: #1858b3;
    background-color: #ffffff;
}

#random {
    border: #474747 solid 3px;
    color: #ffffff;
    background-color: #474747;
    width: 15%;
    height: 40px;
    border-radius: 5px;
    text-align: center;
    text-transform: uppercase;
    font-size: 1.05rem;
    padding: 5px;
    margin-bottom: 10px;
    margin-top: 40px;
    margin-left: 40px;
}

#random:hover {
    border: #474747 solid 3px;
    color: #474747;
    background-color: #ffffff;
}

#reset {
    text-transform: uppercase;
    border: #fa0000 solid 3px;
    color: #ff0000;
    background-color: #ffff;
    width: 10%;
    height: 40px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
    margin-top: 20px;
    margin-right: 40px;
    float: right;
}

#reset:hover {
    background-color: #ff0000;
    border: #fa0000 solid 3px;
    color: #ffffff;
}
/* styling for tables header area */

.table-headers {
    height: 120px;
}

/* styling for user option area */

#data-one input {
    border: #059ca4 solid 3px;
    background-color: #059ca4;
    width: 85%;
    height: 20px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
}

#data-one input::placeholder {
    color: #ffffff;
}

#data-two input {
    border: #de5a22 solid 3px;
    background-color: #de5a22;
    width: 85%;
    height: 20px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
}

#data-two input::placeholder {
    color: #ffffff;
}

#data-three input {
    border: #1a8812 solid 3px;
    background-color: #1a8812;
    width: 85%;
    height: 20px;
    border-radius: 5px;
    text-align: center;
    padding: 10px;
    margin-bottom: 10px;
}

#data-three input::placeholder {
    color: #ffffff;
}

input::placeholder {
    color: #1859b39c;
}

#option-one {
    width: 15%;
}

#option-two {
    width: 15%;
}

#option-three {
    width: 15%;
    display: contents;
}

.user-options {
    height: 120px;
}

.user-options-one input {
    border: none;
    width: 85%;
    height: 50px;
    text-align: center;
    height: 120px;
}

.user-options-one input::placeholder {
    color: #059ca4;
    text-decoration: underline;
}

.user-options-two input {
    border: none;
    width: 85%;
    height: 50px;
    text-align: center;
    height: 120px;
}

.user-options-two input::placeholder {
    color: #de5a22;
    text-decoration: underline;
}

.user-options-three input {
    border: none;
    width: 85%;
    height: 50px;
    text-align: center;
    height: 120px;
}

.user-options-three input::placeholder {
    color: #1a8812;
    text-decoration: underline;
}

/* styling for results area */

#result-area {
    width: 100%;
    padding: 10px;
    display: flex;
}

